--- a/app/templates/lecturerPart/lecturerProfile.html
+++ b/app/templates/lecturerPart/lecturerProfile.html
@@ -60,9 +60,9 @@
                 <strong>Error:</strong> {{ error_message }}
             </div>
             {% endif %}
-
-            <div class="button-frame">
-                <button type="submit" name="register">Submit</button>
+            
+            <div class="button-wrapper">
+                    <button type="submit">Submit</button>
             </div>
         </form>
     </div>
