--- a/app/templates/lecturerPart/lecturerProfile.html
+++ b/app/templates/lecturerPart/lecturerProfile.html
@@ -4,7 +4,7 @@
 
 <div class="menu-section">
     <div class="main-frame">
-        <form>
+        <form style="width: 50%; align-self: center;">
             <br>
             <h1>Profile</h1>
             <br>
@@ -60,7 +60,7 @@
                 <strong>Error:</strong> {{ error_message }}
             </div>
             {% endif %}
-            
+
             <div class="button-wrapper">
                     <button type="submit">Submit</button>
             </div>
