--- a/app/static/css/frontPart.css
+++ b/app/static/css/frontPart.css
@@ -72,8 +72,10 @@ button {
 
 
 .button-frame {
-    display: flex;
-    justify-content: center; /* Horizontally centers the button */
+    width: 25vh;
+    padding: 8px 16px;
+    margin-top: 25px;
+    background-color: #007bff;
 }
 
 .button-frame button {
