--- a/app/static/css/frontPart.css
+++ b/app/static/css/frontPart.css
@@ -72,20 +72,20 @@ button {
 
 
 .button-frame {
-    width: 25vh;
-    padding: 8px 16px;
-    margin-top: 25px;
-    background-color: #007bff;
+    text-align: center;
+    margin-top: 20px;
+    padding: 10px;
 }
 
 .button-frame button {
-    padding: 12px 24px;
+    padding: 8px 16px;
     font-size: 1.1rem;
     border: none;
     border-radius: 6px;
     background-color: #007bff;
     color: white;
     cursor: pointer;
+    margin-top: 25px;
     transition: background-color 0.3s ease;
     width: 25%;
 }
