--- a/app/templates/lecturerPart/lecturerProfile.html
+++ b/app/templates/lecturerPart/lecturerProfile.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 <div class="menu-section">
-    <div class="main-frame">
-        <form style="width: 50%; align-self: center;">
+    
+        <form style= "align-self: center;">
             <br>
             <h1>Profile</h1>
             <br>
@@ -18,6 +18,19 @@
 
                     <label class="text-position">Email Address</label>
                     <input type="text" name="email" value="{{ lecturerEmail_text }}" readonly><br>
+
+                    <label class="text-position">Department</label>
+                    <select name="department" value="{{ lecturerDepartment_text }}">
+                        <option value="" disabled selected>Select Department</option>
+                        <option value="CADP - CENTRE OF AUSTRALIAN DEGREE PROGRAM">(CADP) CENTRE OF AUSTRALIAN DEGREE PROGRAM</option>
+                        <option value="CAE - CENTRE OF AMERICAN STUDENT">(CAE) CENTRE OF AMERICAN STUDENT</option>
+                        <option value="CEPS - CENTRE OF EXCELLENT FOR PRE-UNIVERSITY STUDIES">(CEPS) CENTRE OF EXCELLENT FOR PRE-UNIVERSITY STUDIES</option>
+                        <option value="LCMPU - LANGUAGE CENTRE">(LCMPU) LANGUAGE CENTRE</option>
+                        <option value="SOBIZ - SCHOOL OF BUSINESS">(SOBIZ) SCHOOL OF BUSINESS</option>
+                        <option value="SOC - SCHOOL OF COMPUTING">(SOC) SCHOOL OF COMPUTING</option>
+                        <option value="SOE - SCHOOL OF ENGINEERING">(SOE) SCHOOL OF ENGINEERING</option>
+                        <option value="SOHOS - SCHOOL OF HOSPITALITY AND CULINARY ARTS">(SOHOS) SCHOOL OF HOSPITALITY AND CULINARY ARTS</option>
+                    </select>
                 </div>
 
                 <div class="form-right">
@@ -53,7 +66,7 @@
                     <button type="submit">Submit</button>
             </div>
         </form>
-    </div>
+
 </div>
 
 <script src="{{ url_for('static', filename='js/function.js') }}"></script>
