--- a/app/templates/lecturerPart/lecturerProfile.html
+++ b/app/templates/lecturerPart/lecturerProfile.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="menu-section">
-    
+    <div class="main-frame">
         <form style= "align-self: center;">
             <br>
             <h1>Profile</h1>
@@ -66,7 +66,7 @@
                     <button type="submit">Submit</button>
             </div>
         </form>
-
+    </div>
 </div>
 
 <script src="{{ url_for('static', filename='js/function.js') }}"></script>
