--- a/app/templates/lecturerPart/lecturerProfile.html
+++ b/app/templates/lecturerPart/lecturerProfile.html
@@ -4,7 +4,7 @@
 
 <div class="menu-section">
     <div class="main-frame">
-        <form style= "align-self: center;">
+        <form style= "align-self: center; width: 50%">
             <br>
             <h1>Profile</h1>
             <br>
