--- a/app/static/css/lecturer/lecturerHome.css
+++ b/app/static/css/lecturer/lecturerHome.css
@@ -10,7 +10,7 @@ form {
     /* border: 2px solid #ccc; */
     border-radius: 10px;
     /* background: #fff; */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); */
     /* margin-top: 3%; */
     font-size: medium;
 }
