--- a/app/templates/lecturerPart/lecturerProfile.html
+++ b/app/templates/lecturerPart/lecturerProfile.html
@@ -11,13 +11,13 @@
             <div style="display: flex; flex-direction: row; justify-content: space-between;">
                 <div class="form-left">
                     <label class="text-position">Full Name as per IC</label>
-                    <input type="text" name="username" value="{{ lecturerName_text }}" readonly><br>
+                    <input type="text" name="username" value="{{ lecturer_name }}" readonly><br>
                     
                     <label class="text-position">Staff ID</label>
-                    <input type="text" name="userid" value="{{ lecturerId_text }}" readonly><br>
+                    <input type="text" name="userid" value="{{ lecturer_id }}" readonly><br>
 
                     <label class="text-position">Email Address</label>
-                    <input type="text" name="email" value="{{ lecturerEmail_text }}" readonly><br>
+                    <input type="text" name="email" value="{{ lecturer_email }}" readonly><br>
 
                     <label class="text-position">Department</label>
                     <select name="department" value="{{ lecturerDepartment_text }}">
@@ -69,6 +69,7 @@
         </form>
     </div>
 </div>
+
 
 <script src="{{ url_for('static', filename='js/function.js') }}"></script>
 
