--- a/app/static/css/frontPart.css
+++ b/app/static/css/frontPart.css
@@ -97,13 +97,24 @@ button {
     font-weight: normal;
 }  
 
+
+
 .alert {
-    color: white;
-    background: red;
     padding: 10px;
-    border-radius: 5px;
     margin-top: 15px;
+    border-radius: 5px;
 }
+
+.alert-success {
+    background-color: #d4edda;
+    color: #155724;
+}
+
+.alert-error {
+    background-color: #f8d7da;
+    color: #721c24;
+}   
+
 
 .toggle-password-btn {
     position: absolute;
