--- a/app/static/css/lecturer/lecturerHome.css
+++ b/app/static/css/lecturer/lecturerHome.css
@@ -221,6 +221,21 @@ input[type="file"] {
 
 
 
+.alert {
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
+
+.alert-success {
+  background-color: #d4edda;
+  color: #155724;
+}
+
+.alert-error {
+  background-color: #f8d7da;
+  color: #721c24;
+}
 
 
 
