--- a/app/static/css/lecturer/lecturerHome.css
+++ b/app/static/css/lecturer/lecturerHome.css
@@ -216,7 +216,7 @@ input[type="file"] {
     color: white;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    width: 25%;
+    width: 25vh;
 }
 
 
