--- a/app/templates/lecturerPart/lecturerBase.html
+++ b/app/templates/lecturerPart/lecturerBase.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/lecturer/lecturerHome.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
