--- a/app/templates/lecturerPart/lecturerProfile.html
+++ b/app/templates/lecturerPart/lecturerProfile.html
@@ -44,24 +44,29 @@
                 <br>
 
                 <div class="form-right">
-                    <label class="text-position">Contact Number</label>
-                    <input type="tel" name="contact" value="{{ lecturerContact_text }}"><br>  
+                        <label class="text-position">Contact Number</label>
+                        <input type="tel" name="contact" value="{{ lecturerContact_text }}"><br>  
 
-                    <div class="password-container">
-                        <label class="text-position">Password</label>
-                        <input type="password" name="password1" value="{{ lecturerPassword1_text }}">
-                        <button type="button" class="toggle-password-btn">
-                            <i class="fas fa-eye"></i>
-                        </button>
-                    </div><br>
+                        <div class="password-container">
+                            <label class="text-position">Password</label>
+                            <input type="password" name="password1" value="{{ lecturerPassword1_text }}">
+                            <button type="button" class="toggle-password-btn">
+                                <i class="fas fa-eye"></i>
+                            </button>
+                        </div><br>
+            
+                        <div class="password-container">
+                            <label class="text-position"> Confirm Password</label>
+                            <input type="password" name="password2" value="{{ lecturerPassword2_text }}">
+                            <button type="button" class="toggle-password-btn">
+                                <i class="fas fa-eye"></i>
+                            </button>
+                        </div>
 
-                    <div class="password-container">
-                        <label class="text-position">Confirm Password</label>
-                        <input type="password" name="password2" value="{{ lecturerPassword2_text }}">
-                        <button type="button" class="toggle-password-btn">
-                            <i class="fas fa-eye"></i>
-                        </button>
+                        <!-- Javascript control the password toggle -->
+                        <script src="{{ url_for('static', filename='js/function.js') }}"></script>
                     </div>
+
                 </div>
             </div>
             <br>
@@ -74,6 +79,5 @@
 </div>
 
 
-<script src="{{ url_for('static', filename='js/function.js') }}"></script>
 
 {% endblock %}
