--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -20,7 +20,7 @@
                 </div>
                 <!-- Result feedback -->
                 <div id="examUploadResult" style="text-align: center;"></div>
-                <div id="examUploadErrors" style="text-align: center;"></div>
+                <div id="examUploadErrors" style="text-align: center; max-height: 15vh; overflow-y: auto;"></div>
             </form>
         </div>
     </div>
