--- a/app/templates/lecturerPart/lecturerProfile.html
+++ b/app/templates/lecturerPart/lecturerProfile.html
@@ -14,7 +14,7 @@
         {% endif %}
         {% endwith %}
 
-        <form style= "align-self: center; width: 50%">
+        <form method="post" style="align-self: center; width: 50%">
             <h1>Profile</h1>
             <br>
             <div style="display: flex; flex-direction: row; justify-content: space-between;">
