--- a/app/templates/adminPart/adminForgotPassword.html
+++ b/app/templates/adminPart/adminForgotPassword.html
@@ -24,11 +24,15 @@
             <br>
 
             <!-- Show any message of doesn't match the require of input -->
-            {% if error_message and request.method == 'POST' %}
-            <div class="alert">
-                <strong>Error:</strong> {{ error_message }}
-            </div>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    <strong>{{ category.capitalize() }}:</strong> {{ message }}
+                </div>
+                {% endfor %}
             {% endif %}
+            {% endwith %}
 
             <!-- Button frame with standard-->
             <div class="button-frame">
