--- a/app/templates/adminPart/adminLogin.html
+++ b/app/templates/adminPart/adminLogin.html
@@ -10,15 +10,15 @@
 <body>
     <form method="POST">
         <!-- Showing any of alert message -->
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
                     <div class="alert alert-{{ category }}">
-                    {{ message }}
+                        <strong>{{ category.capitalize() }}:</strong> {{ message }}
                     </div>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
 
         <div class="heading"></div>
         <br>
