--- a/app/templates/adminPart/adminUploadLecturerList.html
+++ b/app/templates/adminPart/adminUploadLecturerList.html
@@ -20,7 +20,7 @@
                 </div>
                 <!-- Result feedback -->
                 <div id="lecturerListUploadResult" style="text-align: center;"></div>
-                <div id="lecturerListUploadErrors" style="text-align: center;"></div>
+                <div id="lecturerListUploadErrors" style="text-align: center; max-height: 15vh; overflow-y: auto;"></div>
             </form>
         </div>
     </div>
