--- a/app/templates/lecturerPart/lecturerLogin.html
+++ b/app/templates/lecturerPart/lecturerLogin.html
@@ -13,9 +13,9 @@
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 {% for category, message in messages %}
-                    <div class="alert alert-{{ category }}">
-                    {{ message }}
-                    </div>
+                <div class="alert alert-{{ category }}">
+                    <strong>{{ category.capitalize() }}:</strong> {{ message }}
+                </div>
                 {% endfor %}
             {% endif %}
         {% endwith %}
