--- a/app/templates/lecturerPart/lecturerLogin.html
+++ b/app/templates/lecturerPart/lecturerLogin.html
@@ -44,11 +44,15 @@
             
             <!-- Show any message of doesn't match the require of input -->
             <div>
-                {% if error_message and request.method == 'POST' %}
-                <div class="alert">
-                    <strong>Error:</strong> {{ error_message }}
-                </div>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}">
+                        <strong>{{ category.capitalize() }}:</strong> {{ message }}
+                    </div>
+                    {% endfor %}
                 {% endif %}
+            {% endwith %}
             </div>
             
             <!-- Javascript control the password toggle -->
