--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -44,7 +44,7 @@
             
             <a href="{{ url_for('admin_profile')}}" 
                class="tab-link {% if active_tab == 'admin_profiletab' %}active{% endif %}" 
-               data-tab="admin_profiletab">Assign Lecturer</a>
+               data-tab="admin_profiletab">Profile</a>
         </div>
         
         <!-- Sub-tab navigation (only shown when on upload section) -->
