--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -15,6 +15,45 @@ form {
     font-size: medium;
 }
 
+.form-left, .form-right {
+    display: flex;
+    flex-direction: column;
+}
+
+.input-container, .password-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; /* Align label and input */
+    position: relative;
+}
+
+label {
+    text-align: left;
+    margin-bottom: 5px;
+}
+
+input, select {
+    width: 25vh;
+    padding: 10px;
+    margin: 1% 0;
+    box-sizing: border-box;
+}
+
+.toggle-password-btn {
+    position: absolute;
+    right: 5px;
+    top: 70%;
+    transform: translateY(-50%);
+    border: none;
+    background: none;
+    cursor: pointer;
+    font-size: 14px;
+    width: 20px;
+    height: 20px;
+    padding: 0;
+    color: #555;
+}
+
 /* Heading frame layout */
 .header-container {
     display: flex;
