--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -10,13 +10,13 @@
             <div style="display: flex; flex-direction: row; justify-content: space-between;">
                 <div class="form-left">
                     <label class="text-position">Full Name as per IC</label>
-                    <input type="text" name="username" value="{{ lecturer_name }}" readonly><br>
+                    <input type="text" name="username" value="{{ admin_name }}" readonly><br>
                     
                     <label class="text-position">Staff ID</label>
-                    <input type="text" name="userid" value="{{ lecturer_id }}" readonly><br>
+                    <input type="text" name="userid" value="{{ admin_id }}" readonly><br>
 
                     <label class="text-position">Email Address</label>
-                    <input type="text" name="email" value="{{ lecturer_email }}" readonly><br>=
+                    <input type="text" name="email" value="{{ admin_email }}" readonly><br>
                 </div>
                 <br>
 
