--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -216,16 +216,28 @@ input[type="file"] {
     color: white;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    width: 25%;
+    width: 25vh;
 }
 
 
 
-.flashes {
-  color: red;
-  font-weight: bold;
-  list-style: none;
+.alert {
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
 }
+
+.alert-success {
+  background-color: #d4edda;
+  color: #155724;
+}
+
+.alert-error {
+  background-color: #f8d7da;
+  color: #721c24;
+}
+
+
 
 
 
