--- a/app/static/css/lecturer/lecturerHome.css
+++ b/app/static/css/lecturer/lecturerHome.css
@@ -232,12 +232,10 @@ input[type="file"] {
   color: #155724;
 }
 
-.alert-error {
+.alert-error, .alert-login_error {
   background-color: #f8d7da;
   color: #721c24;
 }
-
-
 
 
 
