--- a/app/templates/lecturerPart/lecturerLogin.html
+++ b/app/templates/lecturerPart/lecturerLogin.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
+
 <body>
     <form method="POST">
-        <!-- Showing any of alert message -->
-        {% for category, message in flashed_messages %}
-            {% if category != 'login_error' %}
+        <!-- Top alert section: Show all except input_error and login_error -->
+        {% for category, message in get_flashed_messages(with_categories=true) %}
+            {% if category not in ['input_error', 'login_error'] %}
             <div class="alert alert-{{ category }}">
                 <strong>{{ category.capitalize() }}:</strong> {{ message }}
             </div>
@@ -40,11 +41,10 @@
                 </button>
             </div>
             
-            <!-- Show any message of doesn't match the require of input -->
+            <!-- Bottom alert section: Show only input_error and login_error messages -->
             <div>   
-                <!-- Bottom alert section: Show only login_error messages -->
-                {% for category, message in flashed_messages %}
-                    {% if category == 'login_error' %}
+                {% for category, message in get_flashed_messages(with_categories=true) %}
+                    {% if category in ['input_error', 'login_error'] %}
                     <div class="alert alert-{{ category }}">
                         <strong>{{ category.capitalize() }}:</strong> {{ message }}
                     </div>
@@ -52,10 +52,9 @@
                 {% endfor %}
             </div>
             
-            <!-- Javascript control the password toggle -->
+            <!-- Rest of your template remains the same -->
             <script src="{{ url_for('static', filename='js/function.js') }}"></script>
             
-            <!-- Button frame with standard-->
             <div class="button-frame">
                 <button type="submit" name="login">Login</button>
                 <br><br>
@@ -66,4 +65,3 @@
         </div>
     </form>
 </body>
-</html>
