--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -232,11 +232,11 @@ input[type="file"] {
   color: #155724;
 }
 
-.alert-error, .alert-login_error {
+
+.alert-error, .alert-input_error, .alert-login_error {
   background-color: #f8d7da;
   color: #721c24;
 }
-
 
 
 
