--- a/app/static/css/lecturer/lecturerHome.css
+++ b/app/static/css/lecturer/lecturerHome.css
@@ -232,7 +232,7 @@ input[type="file"] {
   color: #155724;
 }
 
-.alert-error, .alert-login_error {
+.alert-error, .alert-input_error, .alert-login_error {
   background-color: #f8d7da;
   color: #721c24;
 }
