--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -233,12 +233,10 @@ input[type="file"] {
 }
 
 
-.alert-error, .alert-input_error, .alert-login_error {
+.alert-error, .alert-input_error {
   background-color: #f8d7da;
   color: #721c24;
 }
-
-
 
 
 
