--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -13,8 +13,7 @@
             <div class="user-details">
                 {{admin_name}} <br>
                 {{admin_id}} <br>
-                {{admin_department}} <br>
-                {{admin_level}}
+                {{admin_department}}
             </div>
             <a href="{{ url_for('admin_logout')}}" style="text-decoration: none;" class="logout-btn" type="button">Logout</a>
         </div>
